p2/confs/app1-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: app1

spec:
  replicas: 1

  selector:
    matchLabels:
      app: app1

  template:
    metadata:
      labels:
        app: app1

    spec:
      containers:
        - name: app1
          image: nginx:alpine
          ports:
            - containerPort: 80

          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html

      volumes:
        - name: html
          configMap:
            name: app1-html
