p2/confs/app3-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: app3

spec:
  replicas: 1

  selector:
    matchLabels:
      app: app3

  template:
    metadata:
      labels:
        app: app3

    spec:
      containers:
        - name: app3
          image: nginx:alpine
          ports:
            - containerPort: 80

          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html

            - name: html
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf

      volumes:
        - name: html
          configMap:
            name: app3-html
