p2/confs/default-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: default-app-ingress

spec:
  ingressClassName: traefik

  defaultBackend:
    service:
      name: app3
      port:
        number: 80
